src/objects/SREC_Price__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Year__c</fullName>
        <label>Compliance Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Market</label>
        <referenceTo>SREC_Market__c</referenceTo>
        <relationshipLabel>SREC Prices</relationshipLabel>
        <relationshipName>SREC_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>SREC Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SREC_Market__c</columns>
        <columns>Compliance_Year__c</columns>
        <columns>Price__c</columns>
        <columns>Current_Price__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA</fullName>
        <columns>NAME</columns>
        <columns>SREC_Market__c</columns>
        <columns>Compliance_Year__c</columns>
        <columns>Price__c</columns>
        <columns>Current_Price__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Massachusetts</value>
        </filters>
        <label>Massachusetts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SREC Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SREC Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>